<resources>
    <string name="app_name" translatable="false">Kikoeru</string>
    <string name="project_kikoeru_android_url" translatable="false">https://github.com/udontknowho/Kikoeru-android</string>
    <string name="project_glide_license" translatable="false">https://github.com/bumptech/glide/blob/master/LICENSE
    </string>
    <string name="project_exo_player_license" translatable="false">
        https://github.com/google/ExoPlayer/blob/release-v2/LICENSE
    </string>
    <string name="project_android_async_license" translatable="false">
        https://github.com/koush/AndroidAsync/blob/master/LICENSE
    </string>
    <string name="project_subsampling_scale_image_view_license" translatable="false">
        https://github.com/davemorrissey/subsampling-scale-image-view/blob/master/LICENSE
    </string>
    <string name="file_provider" translatable="false">com.zinhao.kikoeru.fileProvider</string>

    <string name="channel_description">Player control</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="my_progress">Self progress</string>
    <string name="about">About</string>
    <string name="all_works">All works</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="mine">Mine</string>
    <string name="review">My review</string>
    <string name="category">Browse</string>
    <string name="category_desc">Voice actor / tag / circle</string>
    <string name="group_playback">Playback</string>
    <string name="group_subtitle">Subtitle window</string>
    <string name="group_storage">Download &amp; storage</string>
    <string name="group_network">Network</string>
    <string name="group_privacy">Privacy &amp; security</string>
    <string name="group_appearance">Appearance</string>
    <string name="group_others">Others</string>
    <string name="new_home_layout">New home layout</string>
    <string name="new_home_layout_desc">Top tab bar version</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_desc">Follow system / light / dark</string>
    <string name="theme_follow_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="group_server">Servers</string>
    <string name="switch_server">Switch server</string>
    <string name="confirm_switch_user">Switch to “%1$s”?</string>
    <string name="add_site">＋ Add a server…</string>
    <string name="login_as_guest">Sign in as guest</string>
    <string name="only_load_has_lrc_desc">Hide works without subtitles</string>
    <string name="save_at_external_desc">Download into the public folder</string>
    <string name="proxy_desc">Only this app goes through it</string>
    <string name="app_lock_desc">Ask for fingerprint / PIN when returning</string>
    <string name="account">Account</string>
    <string name="works_layout">Layout</string>
    <string name="list_layout">List layout</string>
    <string name="cover_layout">Cover gird</string>
    <string name="detail_layout">Detail gird</string>
    <string name="tag">Tag</string>
    <string name="local_works">Cache</string>
    <string name="sort">Sort</string>
    <string name="sort_random">Random</string>
    <string name="guest_login_hint">This server needs no account — just tap the button below</string>
    <string name="release_date">Release date</string>
    <string name="rj_number">RJ number</string>
    <string name="prize">Prize</string>
    <string name="last_in_lib">Last in lib</string>
    <string name="va_voicer">Va</string>
    <string name="download_mission">Download mission</string>
    <string name="only_load_has_lrc">Only load have lrc</string>
    <string name="more">More</string>
    <string name="this_is_a_open_source_project">This is a open source project!</string>
    <string name="marked">MARKED</string>
    <string name="listening">LISTENING</string>
    <string name="listened">LISTENED</string>
    <string name="replay">REPLAY</string>
    <string name="postponed">POSTPONED</string>
    <string name="confirm">OK</string>
    <string name="view">View</string>
    <string name="mark_action">Action</string>
    <string name="downloading">Downloading</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="check_mission">View Mission</string>
    <string name="open">open</string>
    <string name="not_download">have not download</string>
    <string name="download">Download</string>
    <string name="debug_mode">Debug mode</string>
    <string name="app_lock">Verify when opening</string>
    <string name="app_lock_title">Unlock</string>
    <string name="app_lock_subtitle">Verify yourself to continue</string>
    <string name="app_lock_unavailable">Set a screen lock or fingerprint first</string>
    <string name="app_lock_button">Unlock</string>
    <string name="proxy_enabled">Use local proxy</string>
    <string name="proxy_addr">Proxy address</string>
    <string name="proxy_addr_invalid">Use host:port, e.g. 127.0.0.1:7890</string>
    <string name="lrc_text_size">Subtitle size</string>
    <string name="lrc_text_color">Subtitle color</string>
    <string name="lrc_text_alpha">Subtitle opacity</string>
    <string name="lrc_text_bg">Subtitle background</string>
    <string name="lrc_bg_none">None</string>
    <string name="lrc_size_invalid">Size must be 8-120</string>
    <string name="savePath">Save position</string>
    <string name="saveAtExternal">Save at external storage</string>
    <string name="search">Search</string>
    <string name="opensource_license">Open Source License</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="user_guest">Guest</string>
    <string name="user_sign_in">Sign In</string>
    <string name="user_enter">Enter (no account)</string>
    <string name="user_enter_guest">Enter (guest)</string>
    <string name="add_builtin_server">Built-in sites</string>
    <string name="host_custom">Custom…</string>
    <string name="guest_no_token">This server needs no account</string>
    <string name="user_sign_up">Sign Up</string>
    <string name="cover_image">Cover image</string>
    <string name="https_api_asmr_net" translatable="false">https://api.asmr.net</string>
    <string name="external_storage_tip">
       Store in path:/storage/emulated/0/KikoeruLib, even if the application is deleted, the content you downloaded will not be deleted. Permission has been detected as not open and is required.
    </string>
    <string name="tip">Tip</string>
    <string name="extra_path">Public dir</string>
    <string name="private_path">Private dir</string>
    <string name="no_lrc">No lrc</string>
    <string name="stop_delay">Stop delay</string>
    <string name="delete_cache">Delete cache</string>
    <string name="local_history">History view</string>
    <string name="staggered">Staggered</string>
    <string name="all_repeat">All Repeat</string>
    <string name="repeat_off">Repeat Off</string>
    <string name="repeat_one">Repeat One</string>
    <string name="circles">Circles</string>
    <string name="lrc_from_local">Lrc from phone</string>
    <string name="choose_lrc_file">Choose lrc file</string>
    <string name="select_lrc_or_vtt">Please select lrc or vtt!</string>
    <string name="load_more">正在加载更多...</string>
</resources>